# FHIRStream-Core

./: .gitignore  Cargo.toml  Dockerfile  compile_for_dad.bat
.agents/rules/: behavior.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs  mask.rs  parser.rs  pipeline.rs
gui/: Cargo.toml
gui/src/: main.rs
server/: Cargo.toml
server/src/: api.rs  config.rs  main.rs
src/: api.rs  main.rs  parser.rs
