[package]
name = "fhirstream_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
num_cpus = "1.16"
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
chrono = "0.4"
