[package]
name = "fhirstream_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
num_cpus = "1.16"
rand = "0.8"
chrono = "0.4"
bumpalo = { version = "3.16", features = ["collections"] }
core_affinity = "0.8"
crossbeam-utils = "0.8"
