[package]
name = "fhirstream_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
fhirstream_core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.14"
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
